# hobo-rpg-save-editor

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
research/: INVENTORY_EDITOR_PLAN.md  SAVE_FORMAT_NOTES.md  __init__.py  save_research.py  test_research.py
scripts/: build_windows.ps1
src/hobo_rpg_save_editor/: __init__.py  __main__.py  cli.py  editor.py  inventory.py  npc.py  quests.py  reputation.py  tui.py
tests/: __init__.py  test_editor.py  test_inventory.py  test_npc.py  test_quests.py  test_reputation.py  test_tui.py
